--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-pygobject
-tkinter
+PyGObject
+pycairo 
+tk
 openai
 numpy
-speech_recognition
+SpeechRecognition
+playsound
+gTTS
+pydub
 transformers
 sounddevice
-playsound
-gtts
-colorTEXT
-pydub
